--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
   <groupId>co.cask.plugins</groupId>
   <artifactId>condition-plugins</artifactId>
-  <version>1.2.0_5.1.217</version>
+  <version>1.2.0_5.1.2171</version>
   <name>Condition Plugin</name>
   <description>A plugin for making control flow decision within a pipeline</description>
   <packaging>jar</packaging>
@@ -74,9 +74,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>5.1.217</cdap.version>
+    <cdap.version>5.1.2171</cdap.version>
     <junit.version>4.11</junit.version>
-    <guava.version>13.0.1</guava.version>
+    <guava.version>28.0-jre</guava.version>
     <commons-jexl.version>3.0</commons-jexl.version>
     <slf4j.version>1.7.5</slf4j.version>
   </properties>
